fix: Page scroll on mobile because of overflowing footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,8 +544,6 @@ ul+.title--medium {
     margin: 15px auto;
     margin-bottom: 15px;
     display: inline-block;
-    position: absolute;
-    align-items: center
 }
 
 footer {
